--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -164,9 +164,10 @@ footer {
   }
 }
 
+
 /* users index */
 
-.user {
+.users {
   list-style: none;
   margin: 0;
   li {
@@ -174,7 +175,7 @@ footer {
     padding: 10px 0;
     border-top: 1px solid $grayLighter;
     &:last-child {
-      border-bottom: 1px solid $grayLighter
+      border-bottom: 1px solid $grayLighter;
     }
   }
 }
