--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,12 +1,16 @@
 <% provide(:title, 'All users') %>
 <h1>All users</h1>
 
-<ul class="users">
-  <% @users.each do |user| %>
-    <li>
-      <%= gravatar_for user, size: 52 %>
-      <%= link_to user.name, user %>
-    </li>
-  <% end %>
-</ul>
+<!-- Adding here the will_paginate method, which expects an object of class ActiveRecord::Relation -->
+<%= will_paginate %>  
 
+  <ul class="users">
+    <% @users.each do |user| %>
+      <li>
+        <%= gravatar_for user, size: 52 %>
+        <%= link_to user.name, user %>
+      </li>
+    <% end %>
+  </ul>
+
+<%= will_paginate %>
